# MultitrackWavFile

./: .gitignore  README.md  SUMMARY.md  appendix.md
MultitrackWavFile/: TrackBasedWavFile.vcxproj  TrackBasedWavFile.vcxproj.filters
TrackBasedWavFile/: Formatter.cpp  MultitrackWav.h  MultitrackWavFile.sln  TrackBasedWavFile.vcxproj  TrackBasedWavFile.vcxproj.filters
ffmx_pack/: CMakeLists.txt  ffmx_pack.cpp  ffmx_pack.h
ffmx_pack/include/: MultitrackWav.h  common.h
